dark mode bug fixed

--- a/src/styles/ThemeSelector/styles.module.css
+++ b/src/styles/ThemeSelector/styles.module.css
@@ -57,6 +57,7 @@
     align-items: center;
     font-family: 'Junge', cursive;
     line-height: 30px;
+    color: white;
     text-align: center;
   }
   
